<fix> text align center clientes depoimentos

--- a/styles/style.css
+++ b/styles/style.css
@@ -874,6 +874,7 @@ dialog > * {
     .clientes-texto {
         font-size: 1rem;
         line-height: 1.5;
+        text-align: center;
     }
 }
 
